@@ -1,5 +1,11 @@
 2008-07-03  Dan Williams  <dcbw@redhat.com>
 
+	* src/vpn-password-dialog.c
+	  src/Makefile.am
+		- (find_auth_dialog_binary): expect VPN auth dialog to be in $LIBEXECDIR
+
+2008-07-03  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/vpn-helpers.c
 	  src/connection-editor/Makefile.am
 		- (vpn_get_plugins): expect VPN GUI plugins to be in $LIBDIR
